Rev. 3.2.8: Finale Version.

--- a/Diskussion.tex
+++ b/Diskussion.tex
@@ -1,6 +1,6 @@
 \chapter{Diskussion}
 
-In diesem Kapitel wird analytisch auf die vorangegangenen Resultate eingegangen und die Schwellenbestimmung der Rater und Software evaluiert. Im Zuge dessen werden die in Kapitel 1.3 aufgeführten Fragen chronologisch beantwortet:
+In diesem Kapitel wird auf die vorangegangenen Resultate eingegangen und die Schwellenbestimmung der Rater und Software evaluiert. Im Zuge dessen werden die in Kapitel 1.3 aufgeführten Fragen chronologisch beantwortet:
 %
 \begin{tabbing}
 	Ist die Spiroergometrie mit dem metabolicscan durchführbar?\\
@@ -13,9 +13,9 @@ Anschließend werden potentielle Fehlerquellen, eventuelle Defizite der Durchfü
 
 \section{Spiroergometrie mit dem metabolicscan}
 
-Während der Messungen wurden keine Störungen oder Fehler der verbauten Sensoren festgestellt. Die maximal gemessene \gls{AF} bei den Testmessungen betrug \SI{52,5}{\per\minute} und liegt damit innerhalb der Grenzen des \gls{O2}-Sensors. Mit \SI{136,27}{\litre\per\minute} befindet sich auch die maximal gemessene \gls{VE} unterhalb des Maximums des Flowsensors. Der metabolicscan wurde vor dem Projekt mithilfe eines Lungensimulators bei Atemfrequenzen zwischen \SIlist{6;50}{\per\minute} sowie unterschiedlichen Gaskonzentrationen kalibriert, wodurch ausgeschlossen werden kann, dass die Sensoren fehlerhaft waren. Zudem wird jeder produzierte metabolicscan mithilfe einer Ausgleichskurve für die Flowmessung angepasst, die in die Gerätekalibrierung zu Beginn einer Messung implementiert ist. Dennoch können Abweichungen in der Messtechnik nicht vollkommen ausgeschlossen werden. Da aber nach den Tests für alle Probanden Plots generiert wurden, in denen die Veränderungen der \gls{VE}, \gls{VO2} und \gls{VCO2} erkennbar waren, ist davon auszugehen, dass der metabolicscan in Verbindung mit der \gls{CCPS} und Fahrradergometern grundsätzlich zur Durchführung der Spiroergometrie mit nachfolgender Auswertung genutzt werden kann.\\
+Während der Messungen wurden keine Störungen oder Fehler der verbauten Sensoren festgestellt. Die maximal gemessene \gls{AF} bei den Testmessungen betrug \SI{52,5}{\per\minute} und liegt damit innerhalb des Messbereichs des \gls{O2}-Sensors. Mit \SI{136,27}{\litre\per\minute} befindet sich auch die maximal gemessene \gls{VE} unterhalb des maximal zulässigen Messwertes des Flowsensors. Der metabolicscan wurde vor dem Projekt mithilfe eines Lungensimulators bei Atemfrequenzen zwischen \SIlist{6;50}{\per\minute} sowie unterschiedlichen Gaskonzentrationen kalibriert, wodurch ausgeschlossen werden kann, dass die Sensoren fehlerhaft waren. Zudem wird jeder produzierte metabolicscan mithilfe einer Ausgleichskurve für die Flowmessung angepasst, die in die Gerätekalibrierung zu Beginn einer Messung implementiert ist. Dennoch können Abweichungen in der Messtechnik nicht vollkommen ausgeschlossen werden. Da aber nach den Tests für alle Probanden Plots generiert wurden, in denen die charakteristischen Veränderungen der \gls{VE}, \gls{VO2} und \gls{VCO2} erkennbar waren, ist davon auszugehen, dass der metabolicscan in Verbindung mit der \gls{CCPS} und Fahrradergometern grundsätzlich zur Durchführung der Spiroergometrie mit nachfolgender Auswertung genutzt werden kann.\\
 \clearpage
-Alle 6-Felder-Grafiken wurden bezüglich ihrer Qualität zunächst subjektiv und unbeeinflusst von anderen Personen in die Kategorien Gut und Kritisch einsortiert, um zu überprüfen, ob mit den Rohdaten des metabolicscan hinreichende Plots zur Schwellenbestimmung erstellt werden können. Plots, die optisch mithilfe einer jeweiligen Methode direkt auszuwerten waren und außerdem keine schwerwiegenden Artefakte aufwiesen, wurden als gut deklariert. In die Rubrik Kritisch kamen jene Graphen, die beispielsweise unregelmäßige Kurvenverläufe aufwiesen und dadurch nur sehr differenziert evaluiert werden konnten. Tab. \ref{tab:tabelle7} zeigt die Kategorien und Zuordnungen.
+Alle 6-Felder-Grafiken wurden bezüglich ihrer Qualität zunächst subjektiv in die Kategorien "`Gut"' und "`Kritisch"' einsortiert, um zu überprüfen, ob mit den Rohdaten des metabolicscan hinreichende Plots zur Schwellenbestimmung erstellt werden können. Plots, die optisch mithilfe einer jeweiligen Methode direkt auszuwerten waren und außerdem keine schwerwiegenden Artefakte aufwiesen, wurden als gut deklariert. In die Rubrik Kritisch kamen jene Graphen, die beispielsweise unregelmäßige Kurvenverläufe aufwiesen und dadurch nur differenziert evaluiert werden konnten. Tab. \ref{tab:tabelle7} zeigt die Kategorien und Zuordnungen.
 %
 \begin{table}[H]
 	\begin{center}
@@ -45,11 +45,11 @@ Mit 64~\% wurde der Großteil aller Plots zur Bestimmung der VT1 als kritisch be
 %
 \subsection{Kriterien für die optische Bewertung der Plots}
 %
-Nachfolgend werden Eigenschaften aufgelistet, anhand derer ein einzelner Plot als gut deklariert wurde. Um gut ausgewertet werden zu können, mussten die V-Slope-Kurven und die dazugehörigen \gls{HF}-Kurven differenzierbar sein. Nur so konnte der überproportionale Anstieg der \gls{VCO2} erkannt werden. Wenn beim V-Slope mehrere Y-Werte einem X-Wert entsprachen, wurde der Graph als kritisch bezeichnet. Einige V-Slopes besaßen allerdings auch sehr dicht beieinander gelegene Messpunkte, sodass Steigungsänderungen optisch schwierig zu erkennen waren. Auch diese Plots wurden als kritisch kategorisiert.
+Nachfolgend werden Eigenschaften aufgelistet, anhand derer ein einzelner Plot kategorisiert wurde. Um gut ausgewertet werden zu können, mussten die V-Slope-Kurven und die dazugehörigen \gls{HF}-Kurven differenzierbar sein. Nur so konnte der überproportionale Anstieg der \gls{VCO2} erkannt werden. Entsprachen beim V-Slope mehrere Y-Werte einem X-Wert, wurde der Graph als kritisch bezeichnet. Einige V-Slopes besaßen allerdings auch sehr dicht beieinander gelegene Messpunkte, sodass Steigungsänderungen optisch schwierig zu erkennen waren. Auch diese Plots wurden als kritisch kategorisiert.
 \clearpage
 Bei guten \gls{EQO2}-Kurven wurde für die VT1-Bestimmung erwartet, dass sie einen eindeutig zu detektierenden Tiefpunkt besaßen, auf den eine von dort an stetige Zunahme folgte. Wenn die Kurven jedoch Schwankungen innehatten oder aber mehrere, optisch auf relativ gleicher Höhe liegende Tiefpunkte aufwiesen, waren sie kritisch.\\
 Ähnliches galt für die VT2-Bestimmung mittels \gls{EQCO2}. Als gut eingestuft wurden Graphen, die eine annähernd Badewannen-ähnliche Form besaßen, sodass im fortgeschrittenen Messverlauf ein deutlich sichtbarer Anstieg zu erkennen war. Es wurden bei den Tests jedoch auch Plots generiert, in denen diese Kurven ebenfalls Schwankungen aufwiesen, sodass mehrere, potentiell als VT2 assoziierbare \gls{EQCO2}-Steigungen existierten. Diese Grafiken galten als kritisch.\\
-Für \gls{VE}/\gls{VCO2} wurden ähnliche Voraussetzungen gestellt, wie für den V-Slope. Auch diese Graphen mussten differenzierbar sein und durften keine zackigen Verläufe annehmen. Auch hier sorgten einige Messpunkte mit optisch geringem Abstand für eine erschwerte, kritische Schwellenbestimmung. 
+Für \gls{VE}/\gls{VCO2} wurden ähnliche Voraussetzungen gestellt, wie für den V-Slope. Auch diese Graphen mussten differenzierbar sein. Auch hier sorgten einige Messpunkte mit optisch geringem Abstand für eine erschwerte, kritische Schwellenbestimmung. 
 %
 \section{Evaluierung der Methoden zur Schwellenbestimmung}
 %
@@ -57,7 +57,7 @@ Die Kategorisierung wurde aus zeitlichen Gründen mit der ersten Version der gra
 %
 \subsection{\acrshort{EQCO2} als optimale Methode}
 %
-75~\% der mit der ersten Version generierten \gls{EQCO2}-Grafiken wurden jedoch bereits als gut kategorisiert. Diese Methode brachte im Vergleich zwischen den Ratern sowie diesen und der Software die geringste Durchschnittsabweichung der VT2 mit \SI{-3,02}{\per\minute} $\pm$\SI{6}{\per\minute} hervor (siehe Abb. \ref{pic:pic26}). Die übrigen Streudiagramme in Abb. \ref{pic:pic23}, \ref{pic:pic24} und \ref{pic:pic27} besitzen dieselbe Skalierung, sodass in Abb. \ref{pic:pic26} deutlich die geringsten Differenzen erkennbar sind. Als zusätzliches Vergleichsinstrument wurde aus den Ergebnissen von Ratern und Software der Korrelationskoeffizient $r$ für jede Methode bestimmt. Je dichter $r$ am Wert eins liegt, desto höher ist die Korrelation und desto eindeutiger ist die Methode. Mit $0,912$ ist der Korrelationskoeffizient für das \gls{EQCO2} sehr nah am Wert eins und im Vergleich zu den anderen Methoden am besten.
+75~\% der mit der ersten Version generierten \gls{EQCO2}-Graphen wurden jedoch bereits als gut deklariert. Diese Methode brachte im Vergleich zwischen den Ratern sowie diesen und der Software die geringste Durchschnittsabweichung der VT2 mit \SI{-3,02}{\per\minute} $\pm$\SI{6}{\per\minute} hervor (siehe Abb. \ref{pic:pic26}). Die übrigen Streudiagramme in Abb. \ref{pic:pic23}, \ref{pic:pic24} und \ref{pic:pic27} besitzen dieselbe Skalierung, sodass in Abb. \ref{pic:pic26} deutlich die geringsten Differenzen erkennbar sind. Als zusätzliches Vergleichsinstrument wurde aus den Ergebnissen von Ratern und Software der Korrelationskoeffizient $r$ für jede Methode bestimmt. Mit $0,912$ liegt der Korrelationskoeffizient für das \gls{EQCO2} sehr nah am Wert eins und ist im Vergleich zu den anderen Methoden am besten.
 %
 \begin{figure}[H]
 	\centering
@@ -68,8 +68,8 @@ Die Kategorisierung wurde aus zeitlichen Gründen mit der ersten Version der gra
 \end{figure}
 %
 Die Regressionsgerade in Abb. \ref{pic:pic28} zeigt die Korrelation mit dem Bestimmtheitsmaß $R^2 = 0,83$ zwischen Ratern und Software bei der mit \gls{EQCO2} bestimmten VT2 noch einmal grafisch. Dieses Maß liegt stets zwischen null und eins und gibt als relative Größe den Zusammenhang zwischen den Ergebnissen an. Bei $R^2 = 1$ bestünde ein perfekter linearer Zusammenhang. Mit $R^2 = 0,83$ geht der Ist-Wert eher gegen eins und ist daher akzeptabel.\\
-Einen guten Plot stellt beispielhaft Abb. \ref{pic:pic20} dar, bei der ein deutlicher Anstieg der \gls{EQCO2}-Kurve beobachtet werden kann. In Abb. \ref{subpic:pic3} ist zu sehen, dass die Differenzen zwischen den beiden Ratern und auch zwischen den Ratern und der Software im Allgemeinen dennoch relativ gering waren. Die drei Netze liegen häufig sehr nah übereinander. Abb. \ref{pic:pic26} zeigt dazu, dass bei lediglich fünf Probanden Differenzen >\SI{10}{\per\minute} zu beobachten sind.\\
-Die Differenz der Schwellenergebnisse entspricht in etwa auch der Differenz zwischen den damit bestimmten Trainingszonen mit dem angepassten Modell nach Wilfried Kindermann, was anhand eines Beispiels mit Proband 11m gezeigt wird. Rater 1 bestimmte die VT2 bei \SI{149}{\per\minute}, Rater 2 bei \SI{160}{\per\minute} und die Software bei \SI{162}{\per\minute}. Die Trainingszonen werden in Abhängigkeit von der VT2, wie in Tab. \ref{tab:tabelle9} folgend, definiert. 
+Einen guten Plot dieser Methode stellt beispielhaft Abb. \ref{pic:pic20} dar, bei der ein stetiger Anstieg der \gls{EQCO2}-Kurve beobachtet werden kann. In Abb. \ref{subpic:pic3} ist zu sehen, dass die Differenzen zwischen den beiden Ratern und auch zwischen den Ratern und der Software im Allgemeinen dennoch relativ gering waren. Die drei Netze liegen häufig sehr nah übereinander. Abb. \ref{pic:pic26} zeigt dazu, dass bei lediglich fünf Probanden Differenzen >\SI{10}{\per\minute} zu beobachten sind.\\
+Die Differenz der Schwellenergebnisse entspricht in etwa auch der Differenz zwischen den damit bestimmten Trainingszonen mit dem angepassten Modell nach Wilfried Kindermann~\cite{Kindermann.2004}, was anhand eines Beispiels mit Proband 11m gezeigt wird. Rater 1 bestimmte die VT2 bei \SI{149}{\per\minute}, Rater 2 bei \SI{160}{\per\minute} und die Software bei \SI{162}{\per\minute}. Die Trainingszonen werden in Abhängigkeit von der VT2, wie in Tab. \ref{tab:tabelle9} folgend, definiert. 
 %
 \begin{table}[H]
 	\begin{center}
@@ -91,16 +91,16 @@ Die Differenz der Schwellenergebnisse entspricht in etwa auch der Differenz zwis
 	\end{center}
 \end{table}
 %
-Tab. \ref{tab:tabelle9} zeigt, dass die Herzfrequenzen der Trainingszonen entsprechend der zwei VT2-Ergebnisse ebenfalls um ca. \SI{11}{\per\minute} voneinander abweichen. In den Trainingszonen mit relativ großen Intervallen (\gls{REKOM}, \gls{GA1} und \gls{GA2}) dürfte sich diese Differenz in der Praxis weniger signifikant auf den Trainingserfolg auswirken, da die \gls{HF} schwierig innerhalb eines kleinen Intervalls zu halten ist. Im Leistungsbereich ist die Differenz kritisch, da das Training innerhalb des Bereichs nach Rater~1 z.B. als Teil einer Wettkampfvorbereitung zu ineffektiv sein könnte, falls die VT2 zu niedrig bestimmt wurde.\\
+Tab. \ref{tab:tabelle9} zeigt, dass die Herzfrequenzen der Trainingszonen entsprechend der zwei VT2-Ergebnisse ebenfalls um ca. \SI{11}{\per\minute} voneinander abweichen. In den Trainingszonen mit relativ großen Intervallen (\gls{REKOM}, \gls{GA1} und \gls{GA2}) dürfte sich diese Differenz in der Praxis weniger signifikant auf den Trainingserfolg auswirken, da die \gls{HF} schwierig innerhalb eines kleinen Intervalls zu halten ist. Im Leistungsbereich wäre die Differenz kritisch, da das Training innerhalb des Bereichs nach Rater~1 z.B. als Teil einer Wettkampfvorbereitung zu ineffektiv sein könnte, falls die VT2 zu niedrig bestimmt wurde.\\
 Für Probandin 6w entstand eine ähnliche Differenz der Ergebnisse, obwohl dort ein eindeutiger Anstieg des \gls{EQCO2} zu sehen ist (siehe Abb. \ref{pic:pic17}). Rater~1 detektierte die VT2 eine Stufe früher, an welcher Stelle bereits ein \gls{EQCO2}-Anstieg in der orangen Kurve zu sehen ist. Dieser war für Rater~2 scheinbar noch nicht signifikant. Die Software bestimmte die VT2 später, da der Wert mit den Referenzdaten der HUNT 3 Studie mehr übereinstimmte. Vergleicht man die VT2 von Rater~1 bei \SI{130}{\per\minute} mit der \gls{HFmax} der Probandin bei \SI{178}{\per\minute}, entspricht die Schwelle 73~\%~\gls{HFmax}. Laut der HUNT 3 Studie liegt die durchschnittliche VT2 für gesunde Frauen zwischen 40 und 49 Jahren bei 90~\%~\gls{HFmax}$\pm$6. Dementsprechend ist die VT2 von Rater~1 zu früh bestimmt worden.\\
-Für Proband 11m (26 Jahre) entspricht die VT2 nach Rater~1 83,7~\%~\gls{HFmax} und nach Rater~2 89,9~\%~\gls{HFmax} (vgl. Tab. \ref{tab:tabelle4}). Verglichen mit der durchschnittlichen VT2 für gesunde Männer zwischen 20 und 29 Jahren mit 87,8~\%~\gls{HFmax}$\pm$5,4 lägen wiederum beide Ergebnisse trotz Differenz innerhalb des Durchschnitts. Die eigene Aussage des Probanden über den Trainingszustand lies Rater~1 hier zur niedrigen VT2 tendieren. Wahrscheinlich ist auch in diesem Fall, dass die VT2 nach Rater~2 und Software näher am Realitätszustand der Person liegt.
+Für Proband 11m (26 Jahre) entspricht die VT2 nach Rater~1 83,7~\%~\gls{HFmax} und nach Rater~2 89,9~\%~\gls{HFmax} (vgl. Tab. \ref{tab:tabelle4}). Verglichen mit der durchschnittlichen VT2 für gesunde Männer zwischen 20 und 29 Jahren mit 87,8~\%~\gls{HFmax}$\pm$5,4 lägen wiederum beide Ergebnisse trotz Differenz innerhalb des Durchschnitts. Die eigene Aussage des Probanden über den Trainingszustand lies Rater~1 hier zur niedrigen VT2 tendieren. Wahrscheinlich ist auch in diesem Fall, dass die VT2 nach Rater~2 und Software näher am Realitätszustand der Person liegt und diese ihre Leistungsfähigkeit unterschätzt hat.
 %
 \subsection{\acrshort{VE}/\acrshort{VCO2} als geeignete Referenzmethode}
 %
-Die Abweichungen zwischen Ratern und Software betragen im Mittel \SI{-4,07}{\per\minute} $\pm$\SI{11}{\per\minute}. Verglichen mit der \gls{EQCO2}-Methode weisen die Ergebnisse größere Unterschiede auf und die Schwellenbestimmungen geschahen weniger eindeutig. Der Korrelationskoeffizient $r$ nimmt den Wert $0,816$ an. 15 von 28 Kurven für diese Methode waren gut. Ein Beispiel bietet Abb. \ref{pic:pic20} von Proband 20m, in der die Zunahme der \gls{VCO2} deutlich zu sehen ist. Rater und Software kamen bei dieser Grafik zu sehr ähnlichen Ergebnissen.\\
+Die Abweichungen zwischen Ratern und Software betragen im Mittel \SI{-4,07}{\per\minute} $\pm$\SI{11}{\per\minute}. Verglichen mit der \gls{EQCO2}-Methode weisen die Ergebnisse größere Unterschiede auf und die Schwellenbestimmungen geschahen weniger eindeutig. Der Korrelationskoeffizient $r$ nimmt den Wert $0,816$ an. Für diese Methode waren 15 von 28 Kurven gut. Ein Beispiel bietet Abb. \ref{pic:pic20} von Proband 20m, in der die Zunahme der \gls{VCO2} deutlich zu sehen ist. Rater und Software kamen bei dieser Grafik zu sehr ähnlichen Ergebnissen.\\
 Einige Kurven waren jedoch kritisch, da sie nicht differenzierbar waren. Bei dieser Methode wirkten sich diese Artefakte allerdings nicht so stark auf die Schwellenbestimmung aus, da sie, wie z.B. in Abb. \ref{pic:pic21} zu erkennen, ausschließlich in der ersten Messhälfte auftraten. Im Bereich der VT2 waren die Verläufe der Graphen meistens gut auszuwerten.\\
 Jedoch traten auch in Feld 4 häufiger Plots auf, bei denen die Messpunkte dicht beieinander lagen und nicht genau ersichtlich war, in welcher Stufe der erste Anstieg auftrat. Hier kann beispielhaft Abb. \ref{pic:pic19} von Proband 9m gesichtet werden. Da der Graph in Feld 4 recht linear verläuft, war die subjektive Auswertung erschwert und die Rater bestimmten die VT2 später als die Software, die den Vorteil der mathematisch genauen Detektion der Steigungsänderung innehat.\\
-Für die Auswertung von \gls{VE}/\gls{VCO2} lässt sich schlussfolgern, dass die Methode in Verbindung mit Mittelwerten und Stufentests erschwert wird, da der Graph anfällig für Artefakte ist. Eine \gls{SD} von $\pm$11 \si{\per\minute} zeigt, dass häufig keine eindeutigen Ergebnisse erzielt werden und diese auch um die mittlere Abweichung sehr stark streuen. Die Software birgt auch bei dieser Methode allerdings den Vorteil, dass die mathematische Bestimmung von Steigungsänderungen gut gelingt und sie somit für Vergleiche nutzbar wird. Eine erneute Auswertung mit einem optimierten Algorithmus könnte zu verbesserten Ergebnissen führen.
+Für die Auswertung von \gls{VE}/\gls{VCO2} lässt sich schlussfolgern, dass die Methode in Verbindung mit Mittelwerten und Stufentests erschwert wird, da der Graph anfällig für Artefakte ist. Eine \gls{SD} von $\pm$11 \si{\per\minute} zeigt, dass häufig keine eindeutigen Ergebnisse erzielt werden und diese auch um die mittlere Abweichung sehr stark streuen. Die Software birgt auch bei dieser Methode allerdings den Vorteil, dass die mathematische Bestimmung von Steigungsänderungen gut gelingt und sie somit für Vergleiche nutzbar wird. Eine erneute Auswertung mit einem optimierten Algorithmus könnte für diese Methode ebenfalls zu verbesserten Ergebnissen führen.
 %
 \subsection{Problematik bei der Bestimmung der VT1}
 %
@@ -126,7 +126,7 @@ Die Artefakte beim V-Slope im Bereich der annehmbaren VT1 können inzwischen auf
 \subsection{Problematik von RQ = 1}
 %
 Tab. \ref{tab:tabelle6} belegt, dass die Methode RQ = 1 zur alleinigen Bestimmung der VT2 nicht sinnvoll ist. In Kapitel 1.3 wurde erwähnt, dass der RQ einst häufig zu früh den Wert eins überschritt und die Schwellenbestimmung dadurch fehlerhaft wurde. Dieser Fall trat bei den Ergebnissen der 28 Tests nicht auf. Dies ist jedoch dadurch begründet, dass bereits Ausgleichsgeraden durch die Entwicklungsabteilung in den Algorithmus implementiert wurden. Darüber hinaus wurde vor dem Start des Projektes ein Befehl aus der Ansteuerung des metabolicscan entfernt, der bewirkt hatte, dass dieser sich zwischen den einzelnen Belastungsstufen rekalibriert. Da jedoch bei einer Spiroergometrie durch den Probanden mehr \gls{CO2} exspiriert wird und die Räumlichkeiten währenddessen nicht belüftet werden, um Störungen des Flowsensors zu vermeiden, steigt entsprechend die \gls{CO2}-Konzentration der Luft. Dies konnte gemessen werden und wirkte sich somit auf die Kalibrierung des Geräts aus, sodass ungewollte Drifts in der RQ-Kurve entstanden.\\
-Bei 9 von 28 Personen stieg der Wert stattdessen gar nicht über eins, sodass die VT2 gar nicht bestimmt werden konnte. Dennoch wurde bei diesen neun Probanden mit \gls{EQCO2} sowie \gls{VE}/\gls{VCO2} die VT2 detektiert. Bei zehn Personen, bei denen mit der Referenzmethode eine VT2 definiert werden konnte, weichen die Werte jedoch von den übrigen Methoden mit \SI{10}{\per\minute} oder mehr ab. Auch die Ausgleichskurven sorgten nicht dafür, dass die Mehrheit der Messergebnisse mit den übrigen Methoden vergleichbar wird. Der Algorithmus wird künftig aus der \gls{CCPS} entfernt und durch die genauere \gls{EQCO2}-Methode ersetzt.
+Bei 9 von 28 Personen stieg der Wert stattdessen gar nicht über eins, sodass die VT2 gar nicht bestimmt werden konnte. Dennoch wurde bei diesen neun Probanden mit \gls{EQCO2} sowie \gls{VE}/\gls{VCO2} die VT2 detektiert. Bei zehn Personen, bei denen mit der Referenzmethode eine VT2 definiert werden konnte, weichen die Werte jedoch von den übrigen Methoden mit \SI{10}{\per\minute} oder mehr ab. Auch die Ausgleichskurven sorgten nicht dafür, dass die Mehrheit der Messergebnisse mit den übrigen Methoden vergleichbar wird. Der Algorithmus wird künftig aus der \gls{CCPS} entfernt und durch die \gls{EQCO2}-Methode ersetzt.
 %
 \section{Plausibilitätsprüfung der Messwerte}
 %
@@ -140,6 +140,7 @@ Für die Spiroergometrie existieren keine validen Methoden zur Plausibilitätsko
 \end{flalign}
 %
 \gls{VE} und \gls{VO2} sollen demnach einen idealerweise linearen Verlauf über die Leistung annehmen. Da die Berechnungen jedoch kaum anthropometrische Daten oder individuelle Trainingszustände einbeziehen, wurde auf die mathematische Art der Überprüfung aufgrund der großen Varianz an Trainingszuständen in dieser Arbeit verzichtet. Allerdings kann mithilfe eines grafischen Vergleichs der Parameter der Verlauf einer Messung analysiert und bewertet werden.\\
+\clearpage
 In den Feldern 5 und 6 der in Kapitel 3 abgebildeten 6-Felder-Grafiken wurden die \gls{VE} und die \gls{VO2} hierfür jeweils der \gls{W} gegenübergestellt. Einige dieser Felder weisen allerdings analoge Schwankungen zu denen in Feld 1 und 4 auf und können ebenfalls mit der fehlerhaften Atemzugerkennung erklärt werden. Als alternative Plausibilitätskontrolle wurde stattdessen der Vergleich mit den Daten der HUNT 3 Studie angestellt, wie in Tab. \ref{tab:tabelle8} aufgeführt.
 %
 \begin{table}[H]
